refactoring and bug fixed
