# src/main/java/idv/fd/restaurant/model/Restaurant.java
@@ -23,36 +23,36 @@ public class Restaurant {
 
     private BigDecimal cashBalance;
 
-    @OneToMany(mappedBy = "restaurant", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
-    @ToString.Exclude
-    @JsonIgnore
-    private List<OpenHours> openHours;
-
-    @OneToMany(mappedBy = "restaurant", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
-    @ToString.Exclude
-    @JsonIgnore
-    private List<Menu> menus;
-
-    public void addOpenHours(List<OpenHours> ohs) {
-
-        for (OpenHours oh : ohs) {
-            oh.setRestaurant(this);
-        }
-        if (openHours == null) {
-            openHours = new ArrayList<>();
-        }
-        openHours.addAll(ohs);
-    }
-
-    public void addMenus(List<Menu> mus) {
-
-        for (Menu mu : mus) {
-            mu.setRestaurant(this);
-        }
-        if (menus == null) {
-            menus = new ArrayList<>();
-        }
-        menus.addAll(mus);
-    }
+//    @OneToMany(mappedBy = "restaurant", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+//    @ToString.Exclude
+//    @JsonIgnore
+//    private List<OpenHours> openHours;
+//
+//    @OneToMany(mappedBy = "restaurant", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
+//    @ToString.Exclude
+//    @JsonIgnore
+//    private List<Menu> menus;
+//
+//    public void addOpenHours(List<OpenHours> ohs) {
+//
+//        for (OpenHours oh : ohs) {
+//            oh.setRestaurant(this);
+//        }
+//        if (openHours == null) {
+//            openHours = new ArrayList<>();
+//        }
+//        openHours.addAll(ohs);
+//    }
+//
+//    public void addMenus(List<Menu> mus) {
+//
+//        for (Menu mu : mus) {
+//            mu.setRestaurant(this);
+//        }
+//        if (menus == null) {
+//            menus = new ArrayList<>();
+//        }
+//        menus.addAll(mus);
+//    }
 
 }
